--- a/KOOP2/KOOP2.vcxproj
+++ b/KOOP2/KOOP2.vcxproj
@@ -147,6 +147,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="business_trip.h" />
+    <ClInclude Include="date.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
